--- a/src/project/company/management/view/ThemCB.form
+++ b/src/project/company/management/view/ThemCB.form
@@ -292,6 +292,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtChange">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtChangeActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <Properties>
